# kuno-hs

./: kuno.cabal
app/: Main.hs
src/Kuno/: Dialogue.hs  Expression.hs  Logic.hs  Parse.hs  TPTP.hs  Translation.hs
src/Kuno/Logic/: Intuitionistic.hs
test/: FamousFormulas.hs  TPTPProblems.hs  Weich.hs
